Code fixes after testing

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ POSTGRES_PASSWORD=demo
 POSTGRES_DB=bank
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
+OPENLINEAGE_URL=https://<your-ataccama-openlineage-endpoint>
+OPENLINEAGE_API_KEY=<your-api-key>
+OPENLINEAGE_NAMESPACE=bank-demo
