Swap local PG for Neon

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,19 @@
-POSTGRES_USER=demo
-POSTGRES_PASSWORD=demo
-POSTGRES_DB=bank
-POSTGRES_HOST=localhost
+# Local default (docker compose)
+# POSTGRES_HOST=localhost
+# POSTGRES_PORT=5432
+# POSTGRES_DB=bank
+# POSTGRES_USER=demo
+# POSTGRES_PASSWORD=demo
+
+# Neon (override these when using Neon)
+POSTGRES_HOST=<your-neon-host-url>
 POSTGRES_PORT=5432
+POSTGRES_DB=neondb
+POSTGRES_USER=neondb_owner
+POSTGRES_PASSWORD=<your-password>
+POSTGRES_SSLMODE=require
+
+# Ataccama OpenLineage connection
 OPENLINEAGE_URL=https://<your-ataccama-openlineage-endpoint>
 OPENLINEAGE_API_KEY=<your-api-key>
 OPENLINEAGE_NAMESPACE=bank-demo
