--- a/dbt/profiles.yml
+++ b/dbt/profiles.yml
@@ -3,10 +3,11 @@ pipeline_demo:
   outputs:
     dev:
       type: postgres
-      host: "{{ env_var('POSTGRES_HOST', 'localhost') }}"
-      user: "{{ env_var('POSTGRES_USER', 'demo') }}"
-      password: "{{ env_var('POSTGRES_PASSWORD', 'demo') }}"
-      port: "{{ env_var('POSTGRES_PORT', '5432') | int }}"
-      dbname: "{{ env_var('POSTGRES_DB', 'bank') }}"
+      host: "{{ env_var('POSTGRES_HOST') }}"
+      user: "{{ env_var('POSTGRES_USER') }}"
+      password: "{{ env_var('POSTGRES_PASSWORD') }}"
+      port: "{{ env_var('POSTGRES_PORT') | int }}"
+      dbname: "{{ env_var('POSTGRES_DB') }}"
       schema: public
       threads: 4
+      sslmode: "{{ env_var('POSTGRES_SSLMODE', 'require') }}"
