--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,11 +26,12 @@ services:
     volumes:
       - ./dbt:/usr/app
     environment:
-      POSTGRES_HOST: postgres
-      POSTGRES_USER: ${POSTGRES_USER:-demo}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-demo}
-      POSTGRES_DB: ${POSTGRES_DB:-bank}
-      POSTGRES_PORT: 5432
+      POSTGRES_HOST: ${POSTGRES_HOST}
+      POSTGRES_PORT: ${POSTGRES_PORT}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_SSLMODE: ${POSTGRES_SSLMODE:-require}
       OPENLINEAGE_URL: ${OPENLINEAGE_URL}
       OPENLINEAGE_API_KEY: ${OPENLINEAGE_API_KEY}
       OPENLINEAGE_NAMESPACE: ${OPENLINEAGE_NAMESPACE:-bank-demo}
